--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "lint": "eslint --quiet .",
     "lint:fix": "eslint --fix .",
-    "test": "npm run lint && cross-env NODE_ENV=test mocha --reporter spec --exit"
+    "test": "npm run lint && cross-env NODE_ENV=test mocha --reporter spec --exit",
+    "seed": "npx sequelize-cli db:seed:all"
   },
   "license": "ISC",
   "dependencies": {
