--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
     "mysql2": "^2.0.2",
+    "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "sequelize": "^5.21.3"
   },
