--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.6.0",
     "mysql": "^2.17.1",
     "mysql2": "^2.0.2",
     "nodemailer": "^6.4.2",
