--- a/auth_config.json
+++ b/auth_config.json
@@ -1,5 +1,5 @@
 {
-  "AUDIENCE": "farm",
-  "AUTH0CLIENTID": "R3zZx3DFgYJCX417H71IPfJ2r1Oc0oQe",
-  "AUTH0DOMAIN": "dev-g6jmrniw.auth0.com"
+  "audience": "farm",
+  "clientId": "R3zZx3DFgYJCX417H71IPfJ2r1Oc0oQe",
+  "domain": "dev-g6jmrniw.auth0.com"
 }
