last-minute fixes to make the demo look better

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "HiddenTimberFarm",
   "version": "1.0.0",
-  "description": "Stable Manager Appp",
+  "description": "Stable Manager App",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
